--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,24 @@
-$paddingLeft: 65px;
+/* color */
+$color-gn: #00c389;
+$color-bk: #252928;
+$color-wt: #ffffff;
+$color-gy-700: #4d5256;
+$color-gy-400: #888f8d;
+$color-gy-100: #a6adab;
+$color-gy-50: #d6d7d8;
+$color-bg-footer: #f2f7f6;
+
+/* font family */
+$font-nanumSquare: "NanumSquare", sans-serif;
+
+/* font size */
+$font-title: 24px;
+$font-sub-title: 18px;
+$font-body: 16px;
+$font-caption: 14px;
+$font-sub-caption: 12px;
+$font-smallest: 11px;
+
+/* font weight */
+$font-wt-md: 600;
+$font-wt-bd: 900;
