--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $color-gy-400: #888f8d;
 $color-gy-100: #a6adab;
 $color-gy-50: #d6d7d8;
 $color-bg-footer: #f2f7f6;
+$color-bg-thumb: #f8fbf9;
 
 /* font family */
 $font-nanumSquare: "NanumSquare", sans-serif;
